--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1,11 +1,9 @@
-@import 'nib'
+@import 'nib';
+@import 'typographic';
+// @import 'lost';
 @import '_variables'
 @import '_mixins';
 @import '_fonts';
 
-body {
-  font-family: 'Helvetica Neue', 'Arial', sans-serif;
-  margin: 0 auto;
-  border: 10px solid purple;
-}
+typographic();
 
