basic lost-grid example

--- a/app/styl/main.styl
+++ b/app/styl/main.styl
@@ -1,9 +1,14 @@
 @import 'nib';
 @import 'typographic';
-// @import 'lost';
+@import 'lost';
 @import '_variables'
 @import '_mixins';
 @import '_fonts';
 
 typographic();
 
+section
+  clearfix()
+
+figure
+  column('1/4')
