--- a/app/templates/additional-content.jade
+++ b/app/templates/additional-content.jade
@@ -1,2 +1,8 @@
 h2 Some additional content
 p This is included into my index.static.jade file!
+
+section
+  figure 1
+  figure 2
+  figure 3
+  figure 4
