--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,3 +1,5 @@
 @import './font-stacks.scss';
 @import './typography.scss';
 @import './layout.scss';
+@import './open-color.scss';
+@import './home.scss';
