Implement hero-ui post-type-3 in jade/scss

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -2,4 +2,6 @@
 @import './typography.scss';
 @import './layout.scss';
 @import './open-color.scss';
+@import './color.scss';
+@import './cards.scss';
 @import './home.scss';
